--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <title>Sentiment Miner</title>
+    <!--Bootstrap dependencies that are required to come first-->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- other meta tags -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+    <title>Sentiment Miner</title>
+
+    <!-- custom static resources -->
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
     <body>
-        <h1> Welcome to the Java Sentiment Miner!</h1>
-        <p> Type in a hashtag to see the current sentiment on twitter regarding it</p>
-        <form action="/displaySentiment" method="POST">
-            <span>#</span><input type="text" name="hashtag" /></span>
-            <input type="submit" name="submit" />
+        <h1 class="center"> Welcome to the Java Sentiment Miner!</h1>
+        <p class="center"> Type in a hashtag to see the current sentiment on twitter regarding it</p>
+        <form class="center" action="/displaySentiment" method="POST">
+            <div class="form-group">
+                <label class="" for="hashtag">Hashtag: #</label>
+                <input class="form-control " placeholder="Enter email" type="text" name="hashtag" id="hashtag"/>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </body>
 </html>
