--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,7 @@
     <title>Sentiment Miner</title>
 
     <!-- custom static resources -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
     <body>
         <h1 class="center"> Welcome to the Java Sentiment Miner!</h1>
